# OpenTIP-scanner

./: README.md  legal_notices.txt  opentip.py  setup.cfg
locale/ru/LC_MESSAGES/: messages.mo
src/opentip/: __main__.py  check_iocs.py  client.py  crontab.py  linux.py
src/opentip/locale/ru/LC_MESSAGES/: messages.pot
