[metadata]
name = opentip
version = 1.2
author = Kaspersky Lab
author_email = igosha@kaspersky.com
description = Tools and Python API for accessing Kaspersky OpenTIP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KasperskyLab/OpenTIP-scanner
license_files = License.txt
                legal_notices.txt
                CLA.md
project_urls =
    Bug Tracker = https://github.com/KasperskyLab/OpenTIP-scanner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    opentip = opentip.__main__:main
    check_iocs = opentip.check_iocs:main
